feat: Add sections to pick card title and color

--- a/src/components/Organisms/FormCreateCard/FormCreateCard.module.css
+++ b/src/components/Organisms/FormCreateCard/FormCreateCard.module.css
@@ -3,14 +3,15 @@
 }
 
 .interactiveSection {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
+  display: grid;
+  grid-template-columns: 40% 40%;
+  gap: 20%;
+  padding: 15px;
   margin-bottom: 40px;
 }
 
 @media (max-width: 800px) {
   .interactiveSection {
-    flex-direction: column;
+    grid-template-columns: 100%;
   }
 }
