--- a/src/components/Atoms/Input/Input.module.css
+++ b/src/components/Atoms/Input/Input.module.css
@@ -15,7 +15,6 @@
   height: 1.15em;
   border: 0.15em solid var(--moon-stone);
   border-radius: 50%;
-  transform: translateY(-0.075em);
   display: grid;
   place-content: center;
 }
@@ -25,7 +24,7 @@
   width: 0.65em;
   height: 0.65em;
   transform: scale(0);
-  transition: 120ms transform ease-in-out;
+  transition: 150ms transform ease-in-out;
   box-shadow: inset 1em 1em var(--moon-stone);
   background-color: var(--moon-stone);
   border-radius: 50%;
@@ -38,6 +37,7 @@
 .cardColor {
   width: 30px;
   height: 20px;
+  border-radius: 10%;
 }
 
 .jonquil {
