--- a/src/components/Molecules/CardPreview/CardPreview.module.css
+++ b/src/components/Molecules/CardPreview/CardPreview.module.css
@@ -1,7 +1,16 @@
 .cardPreview {
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
   border: 1px dashed var(--jonquil);
   border-radius: 5%;
   padding: 20px;
+}
+
+.cardTitle {
+  padding: 15px 0;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .jonquil {
