--- a/src/components/Organisms/FormCreateCard/FormCreateCard.module.css
+++ b/src/components/Organisms/FormCreateCard/FormCreateCard.module.css
@@ -5,8 +5,8 @@
 .interactiveSection {
   display: grid;
   grid-template-columns: 40% 40%;
-  gap: 20%;
-  padding: 15px;
+  gap: 10%;
+  padding: 5%;
   margin-bottom: 40px;
 }
 
