--- a/src/components/Atoms/Input/Input.module.css
+++ b/src/components/Atoms/Input/Input.module.css
@@ -25,6 +25,7 @@
   background: linear-gradient(to bottom, var(--moon-stone) 1px, transparent 1px)
     0 0 / 100% 20px repeat-y;
   line-height: 1.5em;
+  resize: none;
 }
 
 .inputColumnFlex input:focus-visible,
