feat: Add loadings, fix _id field

--- a/src/components/Organisms/CardsBoard/CardsBoard.module.css
+++ b/src/components/Organisms/CardsBoard/CardsBoard.module.css
@@ -1,6 +1,8 @@
 .cardsBoard {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
   gap: 20px;
+  min-height: 60vh;
 }
