--- a/src/components/Organisms/BottomBar/BottomBar.module.css
+++ b/src/components/Organisms/BottomBar/BottomBar.module.css
@@ -1,12 +1,59 @@
 .bottomBar {
+  margin-bottom: 10px;
+}
+
+.carouselContainer {
   width: 100%;
-  height: 50px;
+  height: 37.5px;
   position: relative;
   overflow: hidden;
 }
 
-.carouselContainer {
+.sliders {
+  animation: carouselAnimation 60s infinite;
   position: absolute;
   width: 100%;
   height: 100%;
+}
+
+@keyframes carouselAnimation {
+  0% {
+    top: 0;
+  }
+  8.33% {
+    top: -100%;
+  }
+  16.66% {
+    top: -200%;
+  }
+  25% {
+    top: -300%;
+  }
+  33.33% {
+    top: -400%;
+  }
+  41.66% {
+    top: -500%;
+  }
+  50% {
+    top: -600%;
+  }
+  58.33% {
+    top: -700%;
+  }
+  66.66% {
+    top: -800%;
+  }
+  75% {
+    top: -900%;
+  }
+  83.33% {
+    top: -1000%;
+  }
+  91.66% {
+    top: -1100%;
+  }
+  100% {
+    top: 0%;
+  }
 }
