--- a/src/components/Atoms/HeartPlus/HeartPlus.module.css
+++ b/src/components/Atoms/HeartPlus/HeartPlus.module.css
@@ -7,9 +7,19 @@
 
 .heartPlusIcon {
   cursor: pointer;
+  opacity: 1;
+  transition: 0.5s ease-in-out;
+}
+
+.heartPlusIcon:hover {
+  transform: scale(1.3);
 }
 
 .heartAdded {
   cursor: default;
-  opacity: 0.5;
+  opacity: 0.3;
+}
+
+.heartAdded:hover {
+  transform: none;
 }
