--- a/src/components/Organisms/KudoCardPresentation/KudoCardPresentation.module.css
+++ b/src/components/Organisms/KudoCardPresentation/KudoCardPresentation.module.css
@@ -1,4 +1,6 @@
 .presentationContainer {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
