--- a/src/components/Atoms/CopyToClipboard/CopyToClipboard.module.css
+++ b/src/components/Atoms/CopyToClipboard/CopyToClipboard.module.css
@@ -1,6 +1,18 @@
 .copyToClipboard {
+  display: flex;
+  align-items: center;
+  gap: 15px;
   background-color: var(--moon-stone);
   border-radius: 5px;
   opacity: 0.5;
   padding: 10px 20px;
+}
+
+.copyIcon {
+  cursor: pointer;
+}
+
+.copiedIcon {
+  cursor: default;
+  opacity: 0.5;
 }
