--- a/src/components/Molecules/CardForm/CardForm.module.css
+++ b/src/components/Molecules/CardForm/CardForm.module.css
@@ -1,10 +1,11 @@
-.cardPreview {
+.cardForm {
   display: flex;
   flex-direction: column;
   gap: 13px;
   border: 1px dashed var(--jonquil);
   border-radius: 5%;
   padding: 20px;
+  max-width: 500px;
 }
 
 .cardTitle {
