--- a/src/components/Organisms/FormCreateCard/FormCreateCard.module.css
+++ b/src/components/Organisms/FormCreateCard/FormCreateCard.module.css
@@ -6,6 +6,8 @@
   display: grid;
   grid-template-columns: 40% 40%;
   gap: 10%;
+  align-items: center;
+  justify-content: center;
   padding: 5%;
   margin-bottom: 40px;
 }
