feat: Add link to KudoCard, adjust error messages

--- a/src/components/Atoms/Typography/Typography.module.css
+++ b/src/components/Atoms/Typography/Typography.module.css
@@ -6,3 +6,10 @@
   color: var(--cornsilk);
   margin: 0;
 }
+
+.error {
+  text-align: center;
+  color: var(--red-pantone);
+  font-size: 2em;
+  font-weight: 700;
+}
