--- a/src/components/Organisms/KudoCardPresentation/KudoCardPresentation.module.css
+++ b/src/components/Organisms/KudoCardPresentation/KudoCardPresentation.module.css
@@ -1,6 +1,7 @@
 .presentationContainer {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   gap: 20px;
   min-height: 60vh;
