feat: add send and create new card button, chnage padding for from, change active button styling

--- a/src/components/Atoms/Button/Button.module.css
+++ b/src/components/Atoms/Button/Button.module.css
@@ -1,4 +1,5 @@
-.submit {
+.submit,
+.button {
   padding: 10px 15px;
   font-weight: 700;
   transition: all;
@@ -14,30 +15,17 @@
   font-size: 0.9em;
 }
 
-.submit:disabled {
-  cursor: not-allowed;
-  opacity: 0.5;
-}
-
-.button {
-  padding: 5px 10px;
-  font-size: 1em;
-  font-weight: 700;
-  text-align: center;
-  transition: all;
-  transition-duration: 0.5s;
-  transition-timing-function: ease-in;
-  color: var(--moon-stone);
-  border: 2px solid var(--moon-stone);
-  cursor: pointer;
-}
-
 .button:hover {
-  color: var(--cornsilk);
-  background-color: var(--moon-stone);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+.submit:disabled,
 .button:disabled {
   cursor: not-allowed;
   opacity: 0.5;
+}
+
+.secondary {
+  color: var(--cornsilk);
+  background-color: var(--moon-stone);
 }
