--- a/src/components/Organisms/FormCreateCard/FormCreateCard.module.css
+++ b/src/components/Organisms/FormCreateCard/FormCreateCard.module.css
@@ -8,8 +8,7 @@
   gap: 10%;
   align-items: center;
   justify-content: center;
-  padding: 5%;
-  margin-bottom: 40px;
+  padding: 30px 5%;
 }
 
 @media (max-width: 800px) {
@@ -18,4 +17,10 @@
     gap: 10px;
     justify-items: center;
   }
+}
+
+.buttonsContainer {
+  display: flex;
+  justify-content: center;
+  gap: 3em;
 }
